#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(p4el fh, 0.1, fujii.hironori@gmail.com)
AC_CONFIG_AUX_DIR(build-aux)
AM_INIT_AUTOMAKE(foreign)

# Checks for programs.
AM_PATH_LISPDIR

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
